<resources>
    <string name="app_name">KartSearch</string>
    <string name="app_Title">나의 Kart 전적을 Search</string>
    <string name="search_hint">라이더 명을 입력하세요</string>
    <string name="recent_searches">최근 검색어</string>
    <string name="error_msg">라이더 정보가 존재하지 않습니다\n검색어를 다시 확인해주세요</string>
    <string name="NexonDevelopers">Data based on NEXON DEVELOPERS</string>
    <string name="single">개인전</string>
    <string name="team">팀전</string>
    <string name="win_stat">승률</string>
    <string name="completion_stat">완주/리타율</string>
    <string name="track_stat">트랙 통계</string>
</resources>