<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mode"
            type="com.hcraestrak.kartsearch.viewModel.ModeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.UserStatsFragment">

        <TextView
            android:id="@+id/user_stats_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:textSize="11sp"
            android:text="@{mode.mode + ` 통계`}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/user_record_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="?selectableItemBackground"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="모드 선택"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@id/user_stats_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_stats_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/statsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_stats_title"
            android:layout_marginTop="30dp">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/winStatChart"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintEnd_toStartOf="@id/completionStatChart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/winStatTitle"
                app:layout_constraintStart_toStartOf="@id/winStatChart"
                app:layout_constraintEnd_toEndOf="@id/winStatChart"
                app:layout_constraintTop_toBottomOf="@id/winStatChart"
                android:layout_marginTop="10dp"
                android:text="@string/win_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/completionStatChart"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toBottomOf="@id/winStatChart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/winStatChart"
                app:layout_constraintTop_toTopOf="@id/winStatChart" />

            <TextView
                android:id="@+id/completionStatTitle"
                app:layout_constraintStart_toStartOf="@id/completionStatChart"
                app:layout_constraintEnd_toEndOf="@id/completionStatChart"
                app:layout_constraintTop_toBottomOf="@id/completionStatChart"
                android:layout_marginTop="10dp"
                android:text="@string/completion_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/avgRankTitle"
                android:text="순위 변동 통계"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/winStatTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/avgRankChart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@id/avgRankTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/avgRank"
                tools:text="최근 100경기의 평균순위: 2.12위"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avgRankChart"/>

            <TextView
                android:id="@+id/trackStatTitle"
                android:text="@string/track_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@id/avgRank"
                app:layout_constraintTop_toBottomOf="@id/avgRank"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trackStatRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                tools:listitem="@layout/item_track"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/trackStatTitle"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/light_blue"
                app:layout_constraintTop_toBottomOf="@id/trackStatRecyclerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/user_stats_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/user_stats_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/user_stats_none_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/unknowncharacter"/>

            <TextView
                android:id="@+id/user_stats_none_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="통계 정보가 없습니다."/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>